# App-snipper

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5c6864ea42fe_initial_migration.py  6f216f3e7fe0_initial_migration.py  f951f7cc9d86_initial_migration.py
logs/: my_app.log.1  my_app.log.2  my_app.log.3
src/: main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippets.py  user.py
src/auth/: auth.py
src/core/: config.py  logger.py
src/models/: __init__.py  model.py  role.py  shorted_url.py
src/schemas/: snippet.py  user.py
src/services/: crud_snippet.py  shorted_url.py
src/tests/: test_get_user.py
